fixed state-admin/departments.html (Departments & Heads) Page
